--- a/ContactBook.UI.WPFAppCompRoot/App.xaml
+++ b/ContactBook.UI.WPFAppCompRoot/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="ContactBook.UI.WPFAppCompRoot.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:ContactBook.UI.WPFAppCompRoot" StartupUri="View/ContactBookView.xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
     <Application.Resources>
         <ResourceDictionary>
-            <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:ContactBook.UI.WPFAppCompRoot" />
+            <local:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
