Can now update Contact entities through the Contact Service

--- a/ContactBook.UI.WPFAppCompRoot/View/ContactBookView.xaml
+++ b/ContactBook.UI.WPFAppCompRoot/View/ContactBookView.xaml
@@ -87,7 +87,7 @@
 
             <StackPanel Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="3" Orientation="Vertical">
                 <Label Content="Notes" />
-                <wpfTool:RichTextBox IsEnabled="{Binding IsEditing}" Text="{Binding SelectedContact.Notes}">
+                <wpfTool:RichTextBox IsEnabled="{Binding IsEditing}" Text="{Binding SelectedContact.Notes, UpdateSourceTrigger=LostFocus}">
                     <wpfTool:RichTextBox.TextFormatter>
                         <wpfTool:PlainTextFormatter />
                     </wpfTool:RichTextBox.TextFormatter>
