--- a/ContactBook.UI.WPFAppCompRoot/View/ContactBookView.xaml
+++ b/ContactBook.UI.WPFAppCompRoot/View/ContactBookView.xaml
@@ -85,9 +85,88 @@
             <TextBox Grid.Row="1" Grid.Column="2" Text="{Binding SelectedContact.MiddleName}" IsEnabled="{Binding IsEditing}"/>
             <TextBox Grid.Row="2" Grid.Column="2" Text="{Binding SelectedContact.LastName}" IsEnabled="{Binding IsEditing}"/>
 
+            <GroupBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Header="Contact Groups">
+                <DockPanel>
+                    
+                </DockPanel>
+            </GroupBox>
+
+            <GroupBox Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Header="Phones">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <DataGrid Grid.Row="0" Grid.Column="0"
+                              ItemsSource="{Binding SelectedContact.Phones}"
+                              SelectedIndex="{Binding SelectedPhoneIndex}"
+                              AutoGenerateColumns="False" 
+                              GridLinesVisibility="None" 
+                              HeadersVisibility="None" 
+                              CanUserAddRows="False" 
+                              SelectionMode="Single">
+                        <DataGrid.Columns>
+                            <DataGridTemplateColumn>
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <ComboBox ItemsSource="{Binding PhoneTypes}"/>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                            <DataGridTextColumn Width="*" Binding="{Binding Number}" />
+                        </DataGrid.Columns>
+                    </DataGrid>
+
+                    <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal">
+                        <Button Content="Add Phone.." Command="{Binding CmdAddPhone}" Visibility="{Binding IsEditing, Converter={StaticResource BoolToVis}}" />
+                        <Button Content="Delete Phone.." Command="{Binding CmdDeletePhone}" Visibility="{Binding IsEditing, Converter={StaticResource BoolToVis}}" />
+                    </StackPanel>
+                </Grid>
+            </GroupBox>
+
+            <GroupBox Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" Header="Emails">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <DataGrid Grid.Row="0" Grid.Column="0"
+                              ItemsSource="{Binding SelectedContact.Emails}"
+                              SelectedIndex="{Binding SelectedEmailIndex}"
+                              AutoGenerateColumns="False" 
+                              GridLinesVisibility="None" 
+                              HeadersVisibility="None" 
+                              CanUserAddRows="False" 
+                              SelectionMode="Single">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Width="*" Binding="{Binding EmailAddr}" />
+                        </DataGrid.Columns>
+                    </DataGrid>
+
+                    <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal">
+                        <Button Content="Add Email.." Command="{Binding CmdAddEmail}" Visibility="{Binding IsEditing, Converter={StaticResource BoolToVis}}" />
+                        <Button Content="Delete Email.." Command="{Binding CmdDeleteEmail}" Visibility="{Binding IsEditing, Converter={StaticResource BoolToVis}}" />
+                    </StackPanel>
+                </Grid>
+            </GroupBox>
+
+            <GroupBox Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" Header="Addresses">
+                <DockPanel>
+                    <Label Content="Addresses" />
+                </DockPanel>
+            </GroupBox>
+
             <StackPanel Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="3" Orientation="Vertical">
                 <Label Content="Notes" />
-                <wpfTool:RichTextBox IsEnabled="{Binding IsEditing}" Text="{Binding SelectedContact.Notes, UpdateSourceTrigger=LostFocus}">
+                <wpfTool:RichTextBox IsEnabled="{Binding IsEditing, UpdateSourceTrigger=LostFocus}" Text="{Binding SelectedContact.Notes, UpdateSourceTrigger=LostFocus}">
                     <wpfTool:RichTextBox.TextFormatter>
                         <wpfTool:PlainTextFormatter />
                     </wpfTool:RichTextBox.TextFormatter>
