--- a/ContactBook.UI.WPFAppCompRoot/View/ContactBookView.xaml
+++ b/ContactBook.UI.WPFAppCompRoot/View/ContactBookView.xaml
@@ -86,9 +86,34 @@
             <TextBox Grid.Row="2" Grid.Column="2" Text="{Binding SelectedContact.LastName}" IsEnabled="{Binding IsEditing}"/>
 
             <GroupBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Header="Contact Groups">
-                <DockPanel>
-                    
-                </DockPanel>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <DataGrid Grid.Row="0" Grid.Column="0"
+                              ItemsSource="{Binding SelectedContact.Groups}"
+                              SelectedIndex="{Binding SelectedGroupIndex}"
+                              AutoGenerateColumns="False" 
+                              GridLinesVisibility="None" 
+                              HeadersVisibility="None" 
+                              CanUserAddRows="False" 
+                              SelectionMode="Single"
+                              IsEnabled="{Binding IsEditing}">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Width="*" Binding="{Binding GroupName}" />
+                        </DataGrid.Columns>
+                    </DataGrid>
+
+                    <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal">
+                        <Button Content="Add Group.." Command="{Binding CmdAddGroup}" Visibility="{Binding IsEditing, Converter={StaticResource BoolToVis}}" />
+                        <Button Content="Delete Group.." Command="{Binding CmdDeleteGroup}" Visibility="{Binding IsEditing, Converter={StaticResource BoolToVis}}" />
+                    </StackPanel>
+                </Grid>
             </GroupBox>
 
             <GroupBox Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Header="Phones">
